--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'net.orange-box.storebox:storebox-lib:1.4.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.8.5'
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
@@ -37,4 +38,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
 }
