--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.congxiaoyao.xber_admin"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,7 @@ android {
     dataBinding{
         enabled true
     }
+
 }
 
 dependencies {
@@ -39,4 +40,5 @@ dependencies {
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.github.codbking:CalendarExaple:v1.0.0'
 }
