SpotManager 和 DriverList 两个模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".dispatch.DispatchTaskActivity" />
         <activity android:name=".settings.SettingsActivity" />
         <activity android:name=".spotmanage.SpotManageActivity" />
+        <activity android:name=".driverslist.DriverItemActivity" />
     </application>
 
 </manifest>
