--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.github.codbking:CalendarExaple:v1.0.0'
+    compile 'com.bigkoo:quicksidebar:1.0.3'
+    compile files('libs/pinyin4j-2.5.0.jar')
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 }
