最后一个我的派发记录 所有功能基本上都完啦！！！ 只差动画啦！！！！

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,14 @@
         <activity android:name=".spotmanage.SpotManageActivity" />
         <activity android:name=".driverslist.driverdetail.DriverDetailActivity" />
         <activity android:name=".driverslist.taskdetail.TaskDetailActivity" />
-        <activity android:name=".driverslist.taskdetail.TraceDetailActivity"
+        <activity
+            android:name=".driverslist.taskdetail.TraceDetailActivity"
             android:theme="@style/AppTheme.TranslucentStatus" />
         <activity
             android:name=".spotmanage.SelectSpotActivity"
             android:theme="@style/AppTheme.TranslucentStatus" />
         <activity android:name=".spotmanage.SearchPoiActivity" />
+        <activity android:name=".publishedtask.TaskTrackActivity"></activity>
     </application>
 
 </manifest>
