--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,6 @@
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".publishedtask.PublishedTaskActivity" />
         <activity android:name=".dispatch.DispatchTaskActivity" />
-        <activity android:name=".settings.SettingsActivity" />
         <activity android:name=".spotmanage.SpotManageActivity" />
         <activity android:name=".driverslist.driverdetail.DriverDetailActivity" />
         <activity android:name=".driverslist.taskdetail.TaskDetailActivity" />
@@ -75,6 +74,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".settings.SettingsActivity"
+            android:theme="@style/AppTheme.Settings">
         </activity>
 
         <service
